# askwizz

./: ENTITIES.md  README.md  docker-compose.yaml
.github/workflows/: ci-backend.yaml  ci-ui.yaml
api/: .gitignore  README.md  alembic.ini  pyproject.toml
api/alembic/: README.md
api/alembic/versions/: 1942fe00aee4_create_connection_table.py
api/src/api/: app.py  lifespan.py  settings.py
api/src/api/route/: auth.py  connection.py  indexing.py  search.py  types.py
api/src/cli/: __main__.py  index_confluence.py
api/src/core/: connection.py  create_connection.py  index_confluence.py  index_connection.py  search.py
api/src/core/models/: rwkv.py
api/src/core/models/embeddings/: __init__.py
api/src/db/: engine.py
api/src/db/models/: connection.py
api/tests/: test_search.py
api/tests/fixtures/: texts.txt
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 1942fe00aee4_create_connection_table.py  c24bfdd468e8_create_search_history_table.py
backend/esearch/api/: app.py  authorization.py  exceptions.py  lifespan.py  settings.py
backend/esearch/api/route/: answer.py  auth.py  connection.py  history.py  indexing.py  search.py  version.py
backend/esearch/cli/: __main__.py  index_confluence.py  index_connection.py  search.py
backend/esearch/core/: answer.py  connection.py  index_confluence.py  index_connection.py  messages.py  search.py
backend/esearch/core/connection/: definition.py  entity.py  index.py
backend/esearch/core/models/: rwkv.py
backend/esearch/core/models/embeddings/: __init__.py  e5.py  huggingface.py
backend/esearch/core/models/llm/: 20B_tokenizer.json  __init__.py  base.py  llama2.py  rwkv.py
backend/esearch/core/parsing/: confluence.py  helpers.py
backend/esearch/core/passage/: definition.py  format.py  hash.py  retrieve.py
backend/esearch/core/search_history/: definition.py
backend/esearch/db/: constants.py  engine.py  init.sql
backend/esearch/db/models/: connection.py  search_history.py
backend/esearch/services/milvus/: client.py  entity.py
backend/tests/fixtures/: confluence_page.json
backend/tests/parsing/: test_confluence.py
backend/tests/parsing/__snapshots__/: test_confluence.ambr
indexer/: .gitignore  README.md  pyproject.toml
indexer/src/: constants.py  create_index.py  find_in_index.py
indexer/src/indexer/: database.py  encoder.py  index.py
indexer/src/indexer/cli/: __main__.py
indexer/src/indexer/cli/commands/: ingest.py  search.py
milvus/: README.md  docker-compose.yml
ui/: .env.production  .eslintrc.cjs  .eslintrc.json  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  prettier.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
ui/app/: layout.tsx  page.tsx  providers.tsx
ui/app/connections/: ConnectionCard.tsx  ConnectionsList.tsx  page.tsx  types.ts
ui/app/new-connection/: AtlassianForm.tsx  ConfluenceForm.tsx  ConnectionForm.tsx  constants.tsx  page.tsx  types.ts
ui/components/: NewConnectionButton.tsx  PassageLink.tsx  Search.tsx  icons.tsx  main-nav.tsx  site-header.tsx
ui/components/contexts/: TokenContext.ts
ui/components/search/: DocumentResult.tsx  PassageText.tsx  Search.tsx  references.json  types.ts
ui/components/search/hooks/: useGroupResponseByDocument.ts  useKeyboardShortcut.ts  useProvideAnswer.ts  useRetrievePassageText.ts
ui/config/: site.ts
ui/hooks/: useGetAuthToken.ts
ui/lib/: dates.ts
ui/src/: App.tsx  config.ts  router.tsx
ui/src/pages/: AtlassianConnect.tsx  Home.tsx  Search.tsx
ui/src/theme/: index.ts
